// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageButton should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled button-color-blue root size-30 fill-light fill-light size-30"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={-1}
  type="button"
>
  <div
    className="uui-caption"
  >
    ...
  </div>
</button>
`;

exports[`PageButton should be rendered correctly with props 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable button-color-blue root size-24 fill-white fill-white size-24"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption"
  >
    1
  </div>
</button>
`;
